[Fix] :: 'Unexpected CSS token: :' on Safari.

--- a/moduiPopup.scss
+++ b/moduiPopup.scss
@@ -78,7 +78,7 @@ div.modui-popup {
 			background: -o-linear-gradient(-45deg, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 49%,rgba(255,255,255,1) 50%,rgba(255,255,255,1) 100%); /* Opera 11.10+ */
 			background: -ms-linear-gradient(-45deg, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 49%,rgba(255,255,255,1) 50%,rgba(255,255,255,1) 100%); /* IE10+ */
 			background: linear-gradient(135deg, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 49%,rgba(255,255,255,1) 50%,rgba(255,255,255,1) 100%); /* W3C */
-			filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+			filter: "progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff',GradientType=1 )"; /* IE6-9 fallback on horizontal gradient */
 
 			border-bottom: 1px solid rgba(0,0,0,.1);
 			border-right: 1px solid rgba(0,0,0,.1);
@@ -94,7 +94,7 @@ div.modui-popup {
 			background: -o-linear-gradient(45deg, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 49%,rgba(255,255,255,1) 50%,rgba(255,255,255,1) 100%); /* Opera 11.10+ */
 			background: -ms-linear-gradient(45deg, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 49%,rgba(255,255,255,1) 50%,rgba(255,255,255,1) 100%); /* IE10+ */
 			background: linear-gradient(45deg, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 49%,rgba(255,255,255,1) 50%,rgba(255,255,255,1) 100%); /* W3C */
-			filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+			filter: "progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff',GradientType=1 )"; /* IE6-9 fallback on horizontal gradient */
 		}
 	}
 	&.right {
@@ -105,7 +105,7 @@ div.modui-popup {
 			background: -o-linear-gradient(45deg, rgba(255,255,255,1) 0%,rgba(255,255,255,1) 50%,rgba(255,255,255,0) 51%,rgba(255,255,255,0) 100%); /* Opera 11.10+ */
 			background: -ms-linear-gradient(45deg, rgba(255,255,255,1) 0%,rgba(255,255,255,1) 50%,rgba(255,255,255,0) 51%,rgba(255,255,255,0) 100%); /* IE10+ */
 			background: linear-gradient(45deg, rgba(255,255,255,1) 0%,rgba(255,255,255,1) 50%,rgba(255,255,255,0) 51%,rgba(255,255,255,0) 100%); /* W3C */
-			filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00ffffff',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+			filter: "progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00ffffff',GradientType=1 )"; /* IE6-9 fallback on horizontal gradient */
 		}
 	}
 
